# DevelopabilityOfTriangleMeshes

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.txt
applications/main/: CMakeLists.txt  handle_configfile.h  main.cpp  meshstruct.h  timestepstruct.h  types.h
cmake/: CGAL_CoreExports-release.cmake  CGAL_CoreExports.cmake  CGAL_CoreLibConfig.cmake
include/developableflow/: compute_cut.cpp  compute_cut.h  curvature_energy.cpp  curvature_energy.h  energy_selector.cpp  energy_selector.h  exactfcts_bisectors.h  flatten_cut.cpp  flatten_cut.h  hinge_energy.cpp  hinge_energy.h  hingepairs_energy.cpp  hingepairs_energy.h  max_hinge_energy.cpp  max_hinge_energy.h  maxhingepairs_energy.cpp  maxhingepairs_energy.h  measure_once_cut_twice.cpp  measure_once_cut_twice.h  mesh_postprocessing.cpp  mesh_postprocessing.h  old_hinge_energy.cpp  old_hinge_energy.h  old_max_hinge_energy.cpp  old_max_hinge_energy.h  timestep.cpp  timestep.h
include/tools/: crossproduct_matrix.cpp  crossproduct_matrix.h  kopp.cpp  kopp.h  numerical_gradient.cpp  numerical_gradient.h  perturb.cpp  perturb.h  qc_color.cpp  qc_color.h  triangle_cosdihedral_angle.cpp  triangle_cosdihedral_angle.h  triangle_dArea.cpp  triangle_dArea.h  triangle_dN.cpp  triangle_dN.h  triangle_dTheta.cpp  triangle_dTheta.h  unitvec_derivative.cpp  unitvec_derivative.h  write_cut_meshes.cpp  write_cut_meshes.h  write_energy.cpp  write_energy.h
include/viewer/: OViewer.cpp  OViewer.h  OViewer_getters_setters.cxx  OViewer_graphics.cxx  shaders.txt
runs/: bunny.txt  coffee.txt  nut.txt  sailboat.txt  sphere.txt
